--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,10 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list>
+    <ion-item *ngFor="let info of tradingInfo">
+      <ion-label>{{ info }}</ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
