add toggle for dark mode

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -64,7 +64,8 @@
     <ion-card-content>
       <ion-item>
         <ion-label>Dark mode</ion-label>
-        <ion-toggle></ion-toggle>
+        <ion-toggle [(ngModel)]="paletteToggle" (ionChange)="toggleChange($event)" justify="space-between"
+      >Dark Mode</ion-toggle>
       </ion-item>
     </ion-card-content>
   </ion-card>
