--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Settings</ion-title>
     </ion-toolbar>
   </ion-header>
 <ion-card>
@@ -16,26 +16,30 @@
   </ion-card-header>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Saved credentials</ion-card-title>
-      <ion-card-subtitle>Unhide api keys</ion-card-subtitle>
+      <ion-card-title> XTB</ion-card-title>
+      <ion-card-subtitle>login credentials</ion-card-subtitle>
 
     </ion-card-header>
     <ion-card-content>
-      <ion-input type="password" label="Trading api key" value="myapikey">
+      <ion-input  label="XTB UserId" [(ngModel)]="xtb_credentials.xtb_userId" placeholder="Enter User Id">
+      </ion-input>
+      <ion-input type="password" label="XTB passsword" [(ngModel)]="xtb_credentials.xtb_password" placeholder="Enter password">
         <ion-input-password-toggle slot="end"></ion-input-password-toggle>
       </ion-input>
-      <ion-input type="password" label="Revolut api key" value="myapikey">
-        <ion-input-password-toggle slot="end"></ion-input-password-toggle>
-      </ion-input>
+      <ion-button expand="block" (click)="saveXtbCredentials()">Save</ion-button>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>API keys for authorization</ion-card-title>
+      <ion-card-title>Trading 212</ion-card-title>
+      <ion-card-subtitle>api key</ion-card-subtitle>
+
     </ion-card-header>
     <ion-card-content>
-      <ion-input type = "password" label="API key" [(ngModel)]="apiKey" placeholder="Enter Trading API key"></ion-input>
+      <ion-input type = "password" label="API key" [(ngModel)]="apiKey" placeholder="Enter Trading API key">
+        <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+      </ion-input>
       <ion-button expand="block" (click)="saveApiKey()">Save</ion-button>
     </ion-card-content>
   </ion-card>
@@ -64,8 +68,8 @@
     <ion-card-content>
       <ion-item>
         <ion-label>Dark mode</ion-label>
-        <ion-toggle [(ngModel)]="paletteToggle" (ionChange)="toggleChange($event)" justify="space-between"
-      >Dark Mode</ion-toggle>
+        <ion-toggle  slot="end" [(ngModel)]="paletteToggle" (ionChange)="toggleChange($event)" justify="space-between"
+      ></ion-toggle>
       </ion-item>
     </ion-card-content>
   </ion-card>
