--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="overview" href="/tabs/overview">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon aria-hidden="true" name="list-outline"></ion-icon>
       <ion-label>Overview</ion-label>
     </ion-tab-button>
-
+<!--
     <ion-tab-button tab="neviemzatial" href="/tabs/neviemzatial">
       <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
       <ion-label>neviem zatial</ion-label>
     </ion-tab-button>
-
+  -->
     <ion-tab-button tab="settings" href="/tabs/settings">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon aria-hidden="true" name="settings"></ion-icon>
       <ion-label>Settings</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
